--- a/mushroom.ipynb
+++ b/mushroom.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9NqZ8DXcq0igEKPaDUgAt",
+      "authorship_tag": "ABX9TyMrCKRjANe86V414C6P42oI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,14 +42,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
         },
         "id": "Ltl8Y8OLaIYr",
-        "outputId": "91cdff80-8cb5-4668-8737-0b8a811602d1"
+        "outputId": "205453f7-42d3-4411-d24c-841e8dd946d5"
       },
       "outputs": [
         {
@@ -63,12 +63,12 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "  classificacao cap-shape cap-surface cap-color bruises? odor gill-attachment  \\\n",
-              "0             p         x           s         n        t    p               f   \n",
-              "1             e         x           s         y        t    a               f   \n",
-              "2             e         b           s         w        t    l               f   \n",
-              "3             p         x           y         w        t    p               f   \n",
-              "4             e         x           s         g        f    n               f   \n",
+              "  classificacao cap-shape cap-surface cap-color bruises odor gill-attachment  \\\n",
+              "0             p         x           s         n       t    p               f   \n",
+              "1             e         x           s         y       t    a               f   \n",
+              "2             e         b           s         w       t    l               f   \n",
+              "3             p         x           y         w       t    p               f   \n",
+              "4             e         x           s         g       f    n               f   \n",
               "\n",
               "  gill-spacing gill-size gill-color  ... stalk-surface-below-ring  \\\n",
               "0            c         n          k  ...                        s   \n",
@@ -95,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-464f0dbb-612c-4848-989b-ed306413a99b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5a4017be-a0f7-4e2a-a335-6c7946d9092f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -118,7 +118,7 @@
               "      <th>cap-shape</th>\n",
               "      <th>cap-surface</th>\n",
               "      <th>cap-color</th>\n",
-              "      <th>bruises?</th>\n",
+              "      <th>bruises</th>\n",
               "      <th>odor</th>\n",
               "      <th>gill-attachment</th>\n",
               "      <th>gill-spacing</th>\n",
@@ -265,7 +265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-464f0dbb-612c-4848-989b-ed306413a99b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5a4017be-a0f7-4e2a-a335-6c7946d9092f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -317,12 +317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-464f0dbb-612c-4848-989b-ed306413a99b button.colab-df-convert');\n",
+              "        document.querySelector('#df-5a4017be-a0f7-4e2a-a335-6c7946d9092f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-464f0dbb-612c-4848-989b-ed306413a99b');\n",
+              "        const element = document.querySelector('#df-5a4017be-a0f7-4e2a-a335-6c7946d9092f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -342,8 +342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a212ec33-2b30-40c8-8823-a6996988e803\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a212ec33-2b30-40c8-8823-a6996988e803')\"\n",
+              "    <div id=\"df-7430ed36-6667-4eae-a57d-049ac518cf7d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7430ed36-6667-4eae-a57d-049ac518cf7d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -462,7 +462,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a212ec33-2b30-40c8-8823-a6996988e803 button');\n",
+              "            document.querySelector('#df-7430ed36-6667-4eae-a57d-049ac518cf7d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -478,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 62
         }
       ],
       "source": [
@@ -487,28 +487,11 @@
         "url_dados = 'https://raw.githubusercontent.com/LucasRosas/MVP-2-Colab/refs/heads/main/mushroom/agaricus-lepiota.data'\n",
         "\n",
         "# labels dos atributos do dataset\n",
-        "labels_atributos = ['classificacao', 'cap-shape',\n",
-        "    'cap-surface',\n",
-        "    'cap-color',\n",
-        "    'bruises?',\n",
-        "    'odor',\n",
-        "    'gill-attachment',\n",
-        "    'gill-spacing',\n",
-        "    'gill-size',\n",
-        "    'gill-color',\n",
-        "    'stalk-shape',\n",
-        "    'stalk-root',\n",
-        "    'stalk-surface-above-ring',\n",
-        "    'stalk-surface-below-ring',\n",
-        "    'stalk-color-above-ring',\n",
-        "    'stalk-color-below-ring',\n",
-        "    'veil-type',\n",
-        "    'veil-color',\n",
-        "    'ring-number',\n",
-        "    'ring-type',\n",
-        "    'spore-print-color',\n",
-        "    'population',\n",
-        "    'habitat']\n",
+        "labels_atributos = ['classificacao', 'cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor', 'gill-attachment',\n",
+        "                    'gill-spacing', 'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring',\n",
+        "                    'stalk-surface-below-ring', 'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 'veil-color',\n",
+        "                    'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat']\n",
+        "\n",
         "# carga do dataset através do csv\n",
         "iris = pd.read_csv(url_dados, names=labels_atributos)\n",
         "\n",
@@ -538,7 +521,7 @@
       "metadata": {
         "id": "zVTOTIewaMty"
       },
-      "execution_count": 35,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -559,7 +542,8 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X = iris.drop('classificacao', axis=1)\n",
+        "colunas_usadas = ['cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor']\n",
+        "X = iris[colunas_usadas]\n",
         "y = iris['classificacao']  # 'e' para edible e 'p' para poisonous\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -569,7 +553,7 @@
       "metadata": {
         "id": "RLsbYrZLhf0z"
       },
-      "execution_count": 36,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -648,18 +632,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jsukrNjQhluF",
-        "outputId": "fdd38058-af11-4fb5-c651-cc9cc2d4e686"
+        "outputId": "449ac79d-969d-4c72-a54e-ebce80e7ef4c"
       },
-      "execution_count": 37,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "KNN - Acurácia: 0.9988\n",
-            "DecisionTree - Acurácia: 1.0000\n",
-            "NaiveBayes - Acurácia: 0.9512\n",
-            "SVM - Acurácia: 0.9988\n"
+            "KNN - Acurácia: 0.9951\n",
+            "DecisionTree - Acurácia: 0.9971\n",
+            "NaiveBayes - Acurácia: 0.9877\n",
+            "SVM - Acurácia: 0.9967\n"
           ]
         }
       ]
@@ -738,15 +722,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "numrOtZzoJLE",
-        "outputId": "487e7cc1-f54b-4748-e7b5-14e57e0e03c2"
+        "outputId": "56f8f8fe-2776-4b5a-edfe-7c0ce749416f"
       },
-      "execution_count": 38,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Melhores parâmetros (KNN): {'classifier__metric': 'euclidean', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform'}\n",
+            "Melhores parâmetros (KNN): {'classifier__metric': 'manhattan', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform'}\n",
             "Acurácia com melhores parâmetros: 1.0\n"
           ]
         }
@@ -800,16 +784,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKLK1I2erwU6",
-        "outputId": "17f6f808-5368-421a-a69b-08eb580877f6"
+        "outputId": "778e6202-adce-4f7f-9c43-9b7dd2e9d608"
       },
-      "execution_count": 39,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Melhores parâmetros (Árvore): {'classifier__criterion': 'gini', 'classifier__max_depth': 5, 'classifier__min_samples_split': 2}\n",
-            "Acurácia com melhores parâmetros: 0.9987694831829368\n"
+            "Melhores parâmetros (Árvore): {'classifier__criterion': 'gini', 'classifier__max_depth': 10, 'classifier__min_samples_split': 20}\n",
+            "Acurácia com melhores parâmetros: 0.9971287940935193\n"
           ]
         }
       ]
@@ -865,20 +849,20 @@
         "print(f\"Acurácia: {grid_search.best_score_:.4f}\")"
       ],
       "metadata": {
-        "id": "DAKoaQCM21nj",
-        "outputId": "7a1ecb82-2a76-4d5a-9741-89fa85df29c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DAKoaQCM21nj",
+        "outputId": "75b8de6d-94e0-4dbf-fe2f-327deebe1e32"
       },
-      "execution_count": 40,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Melhores parâmetros: {'classifier__alpha': 0.1, 'classifier__fit_prior': False}\n",
-            "Acurácia: 0.8375\n"
+            "Melhores parâmetros: {'classifier__alpha': 2.0, 'classifier__fit_prior': True}\n",
+            "Acurácia: 0.9298\n"
           ]
         }
       ]
@@ -938,20 +922,20 @@
         "print(f\"Acurácia com melhores parâmetros: {grid_search.best_score_:.4f}\")"
       ],
       "metadata": {
-        "id": "VHXshmPQ5bcS",
-        "outputId": "dd93f020-8811-4fd9-cf88-8d570a9488cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VHXshmPQ5bcS",
+        "outputId": "1a9fe5ba-0a73-43a1-cb7c-78e38f42f8bc"
       },
-      "execution_count": 41,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Melhores parâmetros (SVM): {'classifier__C': 0.1, 'classifier__gamma': 'scale', 'classifier__kernel': 'linear'}\n",
-            "Acurácia com melhores parâmetros: 0.9998\n"
+            "Melhores parâmetros (SVM): {'classifier__C': 1, 'classifier__gamma': 'scale', 'classifier__kernel': 'rbf'}\n",
+            "Acurácia com melhores parâmetros: 0.9944\n"
           ]
         }
       ]
@@ -1019,13 +1003,13 @@
         "# modelo_carregado = joblib.load('modelo_knn_cogumelos.pkl')"
       ],
       "metadata": {
-        "id": "ZEFibCUXBOAZ",
-        "outputId": "651578ff-a7b7-45f8-8728-f3df2a816d87",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZEFibCUXBOAZ",
+        "outputId": "674cda7a-4103-473c-fd7d-1edc8d9d5ae4"
       },
-      "execution_count": 42,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1019,69 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Carrega o modelo\n",
+        "modelo = joblib.load(\"modelo_knn_cogumelos.pkl\")\n",
+        "\n",
+        "# Lista completa de atributos (exceto o alvo)\n",
+        "atributos = ['cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor']\n",
+        "\n",
+        "# Dado parcial (exemplo real)\n",
+        "entrada_parcial = {\n",
+        "    'cap-shape': 'c',\n",
+        "    'cap-surface': 'x',\n",
+        "    'cap-color': 'y',\n",
+        "    'bruises': 'f',\n",
+        "    'odor': 'n'\n",
+        "}\n",
+        "\n",
+        "# Preenche os outros com valores neutros ou '?'\n",
+        "entrada_completa = {col: entrada_parcial.get(col, '?') for col in atributos}\n",
+        "\n",
+        "# Cria DataFrame com uma linha\n",
+        "df_teste = pd.DataFrame([entrada_completa])\n",
+        "\n",
+        "# Faz a previsão\n",
+        "probabilidades = modelo.predict_proba(df_teste)\n",
+        "\n",
+        "# Mapear o índice da classe\n",
+        "classes = modelo.classes_\n",
+        "mapa_classes = {0: 'comestível', 1: 'venenoso'}\n",
+        "\n",
+        "label_encoder.fit(iris['classificacao'])\n",
+        "print(label_encoder.classes_)\n",
+        "\n",
+        "# Mostra as chances\n",
+        "for classe, prob in zip(classes, probabilidades[0]):\n",
+        "    nome_legivel = mapa_classes.get(classe, classe)\n",
+        "    print(f\"Probabilidade de ser {nome_legivel}: {prob:.2%}\")"
+      ],
+      "metadata": {
+        "id": "Nk-xJFamRGlz",
+        "outputId": "20abe5ea-9e7d-44e9-e637-309fea69ec6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['e' 'p']\n",
+            "Probabilidade de ser comestível: 0.00%\n",
+            "Probabilidade de ser venenoso: 100.00%\n"
+          ]
         }
       ]
     }
