--- a/mushroom.ipynb
+++ b/mushroom.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO94NpS9igtbjz88Ho38pbl",
+      "authorship_tag": "ABX9TyOFOWdhHFOdtune2lmZUfwa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 326
         },
         "id": "Ltl8Y8OLaIYr",
         "outputId": "02e34ed2-ddf3-4a1c-ab37-fd260af6b6a8"
@@ -616,6 +616,22 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "# Transforma 'e' e 'p' para 0 e 1\n",
+        "label_encoder = LabelEncoder()\n",
+        "y_train_encoded = label_encoder.fit_transform(y_train)\n",
+        "y_test_encoded = label_encoder.fit_transform(y_test)"
+      ],
+      "metadata": {
+        "id": "39_dbRNV8Iah"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
@@ -675,10 +691,10 @@
         "\n",
         "    pipelines.append((nome, pipeline))\n",
         "\n",
-        "    pipeline.fit(X_train, y_train)\n",
+        "    pipeline.fit(X_train, y_train_encoded)\n",
         "    # mostrando a acurária\n",
-        "    score = pipeline.score(X_test, y_test)\n",
-        "    cv_results = cross_val_score(pipeline, X_train, y_train, cv=kfold, scoring=scoring)\n",
+        "    score = pipeline.score(X_test, y_test_encoded)\n",
+        "    cv_results = cross_val_score(pipeline, X_train, y_train_encoded, cv=kfold, scoring=scoring)\n",
         "    results.append(cv_results)\n",
         "    names.append(nome)\n",
         "    print(f\"{nome} - Score: {score:.4f} - Acurácia média na validação cruzada: {cv_results.mean():.4f}\")\n",
@@ -698,9 +714,9 @@
           "height": 1000
         },
         "id": "jsukrNjQhluF",
-        "outputId": "375f5664-19b1-410a-f788-29aa25b3f073"
+        "outputId": "22940cea-c0b4-466f-976b-72e5c4cad5f0"
       },
-      "execution_count": 5,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,13 +745,13 @@
       "source": [
         "Se tudo rodou como deveria para test_size=0.3 e random_state=42 encontramos o seguite:\n",
         "\n",
-        "> KNN - Acurácia: 0.9951\n",
-        ">\n",
-        "> DecisionTree - Acurácia: 0.9971\n",
-        ">\n",
-        "> NaiveBayes - Acurácia: 0.9877\n",
-        ">\n",
-        "> SVM - Acurácia: 0.9967\n",
+        "| Modelo           | Score no Teste | Acurácia Média na Validação Cruzada |\n",
+        "| ---------------- | -------------- | ----------------------------------- |\n",
+        "| **KNN**          | 0.9951         | 0.9933                              |\n",
+        "| **DecisionTree** | 0.9971         | 0.9930                              |\n",
+        "| **NaiveBayes**   | 0.9877         | 0.9854                              |\n",
+        "| **SVM**          | 0.9967         | 0.9944                              |\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -775,12 +791,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
-        "# Transforma 'e' e 'p' para 0 e 1\n",
-        "label_encoder = LabelEncoder()\n",
-        "y_train_encoded = label_encoder.fit_transform(y_train)\n",
-        "y_test_encoded = label_encoder.fit_transform(y_test)\n",
         "\n",
         "pipeline_knn = Pipeline([\n",
         "    ('preprocessor', preprocessor),\n",
@@ -809,9 +820,12 @@
         "test_accuracy = grid_knn.score(X_test, y_test_encoded)\n",
         "\n",
         "# Exibe resultados\n",
-        "print(f\"Acurácia média na validação cruzada (melhor modelo): {grid_knn.best_score_:.4f}\")\n",
+        "print(f\"Melhor média de acurácia na validação cruzada (GridSearchCV): {grid_knn.best_score_:.4f}\")\n",
         "print(\"Melhores parâmetros (KNN):\", grid_knn.best_params_)\n",
-        "print(f\"Acurácia no teste: {best_pipeline_knn.score(X_test, y_test_encoded):.4f}\")\n",
+        "\n",
+        "acc_test_knn = best_pipeline_knn.score(X_test, y_test_encoded)\n",
+        "print(f\"[KNN] Acurácia no teste (dados não vistos): {acc_test_knn:.4f}\")\n",
+        "\n",
         "\n",
         "joblib.dump(best_pipeline_knn, 'best_model_knn.pkl')\n",
         "print(\"Modelo salvo em 'best_model_knn.pkl'\")"
@@ -821,9 +835,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "numrOtZzoJLE",
-        "outputId": "974b78c7-1ce5-4bf7-c189-45ce8c23dc65"
+        "outputId": "cff08269-c961-4bd1-fba5-f2bc35352730"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,6 +845,7 @@
           "text": [
             "Acurácia média na validação cruzada (melhor modelo): 0.9937\n",
             "Melhores parâmetros (KNN): {'classifier__metric': 'manhattan', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform'}\n",
+            "Acurácia (melhor média no GridSearch): 0.9937\n",
             "Acurácia no teste: 0.9930\n",
             "Modelo salvo em 'best_model_knn.pkl'\n"
           ]
@@ -840,7 +855,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nessa configuração do KNN {'classifier__metric': 'manhattan', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform'} a acurácia chegou em 1.0. Esse é um ótimo indicador!"
+        "Nessa configuração do KNN {'classifier__metric': 'manhattan', 'classifier__n_neighbors': 3, 'classifier__weights': 'uniform'} a acurácia média chegou em 0.9937 na validação cruzada."
       ],
       "metadata": {
         "id": "iRNddvYnopSM"
@@ -878,7 +893,7 @@
         "\n",
         "# Executando GridSearchCV\n",
         "grid_dt = GridSearchCV(pipeline_dt, param_grid_dt, cv=5, scoring='accuracy')\n",
-        "grid_dt.fit(X_train, y_train)\n",
+        "grid_dt.fit(X_train, y_train_encoded)\n",
         "\n",
         "# Atualizando o pipeline com os melhores parâmetros\n",
         "best_pipeline_dt = grid_dt.best_estimator_\n",
@@ -889,9 +904,11 @@
         "names.append('grid_dt')\n",
         "\n",
         "# Exibindo os resultados\n",
-        "print(f\"Acurácia média na validação cruzada: {cv_results.mean():.4f}\")\n",
-        "print(\"Melhores parâmetros (Árvore):\", grid_dt.best_params_)\n",
-        "print(\"Acurácia com melhores parâmetros:\", best_pipeline_dt.score(X_test, y_test))\n",
+        "print(f\"Melhor média de acurácia na validação cruzada (GridSearchCV):: {grid_dt.best_score_:.4f}\")\n",
+        "print(\"Melhores parâmetros (DecisionTreeClassifier):\", grid_dt.best_params_)\n",
+        "\n",
+        "acc_test_dt = best_pipeline_dt.score(X_test, y_test_encoded)\n",
+        "print(f\"[DecisionTreeClassifier] Acurácia no teste (dados não vistos): {acc_test_dt:.4f}\")\n",
         "\n",
         "joblib.dump(best_pipeline_dt, 'best_model_dt.pkl')\n",
         "print(\"Modelo salvo em 'best_model_dt.pkl'\")\n"
@@ -901,17 +918,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKLK1I2erwU6",
-        "outputId": "1e2cf5d2-a2fe-456f-bef5-48ab10267cc5"
+        "outputId": "15df8368-c32d-4169-f8f4-716c7e4f8058"
       },
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Acurácia média na validação cruzada: 0.9935\n",
-            "Melhores parâmetros (Árvore): {'classifier__criterion': 'gini', 'classifier__max_depth': 10, 'classifier__min_samples_split': 20}\n",
-            "Acurácia com melhores parâmetros: 0.9971287940935193\n",
+            "Melhor média de acurácia na validação cruzada (GridSearchCV):: 0.9931\n",
+            "Melhores parâmetros (DecisionTreeClassifier): {'classifier__criterion': 'gini', 'classifier__max_depth': 10, 'classifier__min_samples_split': 20}\n",
+            "[DecisionTreeClassifier] Acurácia no teste (dados não vistos): 0.9971\n",
             "Modelo salvo em 'best_model_dt.pkl'\n"
           ]
         }
@@ -966,7 +983,7 @@
         "\n",
         "# GridSearchCV (no treino, como os outros modelos)\n",
         "grid_nb = GridSearchCV(pipeline_nb, param_grid, cv=5, scoring='accuracy')\n",
-        "grid_nb.fit(X_train, y_train)\n",
+        "grid_nb.fit(X_train, y_train_encoded)\n",
         "\n",
         "# Atualizando o pipeline com os melhores hiperparâmetros\n",
         "best_pipeline_nb = grid_nb.best_estimator_\n",
@@ -976,13 +993,12 @@
         "results.append(cv_results)\n",
         "names.append('grid_nb')\n",
         "\n",
-        "# Resultados\n",
-        "print(f\"Acurácia média na validação cruzada: {cv_results.mean():.4f}\")\n",
-        "print(f\"Melhores parâmetros: {grid_nb.best_params_}\")\n",
-        "print(f\"Acurácia (melhor média no GridSearch): {grid_nb.best_score_:.4f}\")\n",
+        "# Exibindo os resultados\n",
+        "print(f\"Melhor média de acurácia na validação cruzada (GridSearchCV):: {grid_nb.best_score_:.4f}\")\n",
+        "print(\"Melhores parâmetros (MultinomialNB):\", grid_nb.best_params_)\n",
         "\n",
-        "# Avaliação no teste final\n",
-        "print(f\"Acurácia no teste: {best_pipeline_nb.score(X_test, y_test):.4f}\")\n",
+        "acc_test_nb = best_pipeline_nb.score(X_test, y_test_encoded)\n",
+        "print(f\"[NaiveBayes] Acurácia no teste (dados não vistos): {acc_test_nb:.4f}\")\n",
         "\n",
         "joblib.dump(best_pipeline_nb, 'best_model_nb.pkl')\n",
         "print(\"Modelo salvo em 'best_model_nb.pkl'\")\n",
@@ -993,18 +1009,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DAKoaQCM21nj",
-        "outputId": "acbdfacb-864e-4bae-ac79-156915515bb7"
+        "outputId": "a717b0b2-2107-4347-d92f-98a6e67c9f8c"
       },
-      "execution_count": 8,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Acurácia média na validação cruzada: 0.9851\n",
-            "Melhores parâmetros: {'classifier__alpha': 0.1, 'classifier__fit_prior': True}\n",
-            "Acurácia (melhor média no GridSearch): 0.9851\n",
-            "Acurácia no teste: 0.9869\n",
+            "Melhor média de acurácia na validação cruzada (GridSearchCV):: 0.9851\n",
+            "Melhores parâmetros (MultinomialNB): {'classifier__alpha': 0.1, 'classifier__fit_prior': True}\n",
+            "[NaiveBayes] Acurácia no teste (dados não vistos): 0.9869\n",
             "Modelo salvo em 'best_model_nb.pkl'\n"
           ]
         }
@@ -1060,7 +1075,7 @@
         "\n",
         "# GridSearchCV\n",
         "grid_svm = GridSearchCV(pipeline_svm, param_grid, cv=5, scoring='accuracy')\n",
-        "grid_svm.fit(X_train, y_train)\n",
+        "grid_svm.fit(X_train, y_train_encoded)\n",
         "\n",
         "# Pegando o pipeline otimizado\n",
         "best_pipeline_svm = grid_svm.best_estimator_\n",
@@ -1070,13 +1085,14 @@
         "results.append(cv_results)\n",
         "names.append('grid_svm')\n",
         "\n",
-        "# Exibindo resultados\n",
-        "print(f\"Acurácia média na validação cruzada: {cv_results.mean():.4f}\")\n",
-        "print(f\"Melhores parâmetros (SVM): {grid_svm.best_params_}\")\n",
-        "print(f\"Acurácia média no GridSearchCV: {grid_svm.best_score_:.4f}\")\n",
         "\n",
-        "# Avaliação final no teste\n",
-        "print(f\"Acurácia no teste: {best_pipeline_svm.score(X_test, y_test):.4f}\")\n",
+        "# Exibindo os resultados\n",
+        "print(f\"Melhor média de acurácia na validação cruzada (GridSearchCV):: {grid_svm.best_score_:.4f}\")\n",
+        "print(\"Melhores parâmetros (SVM):\", grid_svm.best_params_)\n",
+        "\n",
+        "acc_test_svm = best_pipeline_svm.score(X_test, y_test_encoded)\n",
+        "print(f\"[SVM] Acurácia no teste (dados não vistos): {acc_test_svm:.4f}\")\n",
+        "\n",
         "joblib.dump(best_pipeline_svm, 'best_model_svm.pkl')\n",
         "print(\"Modelo salvo em 'best_model_svm.pkl'\")\n"
       ],
@@ -1085,18 +1101,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VHXshmPQ5bcS",
-        "outputId": "052b8065-5347-4831-b80e-7b6c6b3eef4a"
+        "outputId": "1a7555f1-7d43-48e5-ad7a-cab148cb6411"
       },
-      "execution_count": 9,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Acurácia média na validação cruzada: 0.9944\n",
+            "Melhor média de acurácia na validação cruzada (GridSearchCV):: 0.9944\n",
             "Melhores parâmetros (SVM): {'classifier__C': 1, 'classifier__gamma': 'scale', 'classifier__kernel': 'rbf', 'classifier__probability': True}\n",
-            "Acurácia média no GridSearchCV: 0.9944\n",
-            "Acurácia no teste: 0.9967\n",
+            "[NaiveBayes] Acurácia no teste (dados não vistos): 0.9967\n",
             "Modelo salvo em 'best_model_svm.pkl'\n"
           ]
         }
@@ -1121,6 +1136,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "| Modelo        | Score Inicial | Acurácia CV Antes | Acurácia CV GridSearch | Score no Teste Final |\n",
+        "|---------------|---------------|-------------------|------------------------|----------------------|\n",
+        "| **KNN**       | 0.9951        | 0.9933            | 0.9937                 | 0.9930               |\n",
+        "| **DecisionTree** | 0.9971      | 0.9930            | 0.9931                 | 0.9971               |\n",
+        "| **NaiveBayes**  | 0.9877      | 0.9854            | 0.9851                 | 0.9869               |\n",
+        "| **SVM**       | 0.9967        | 0.9944            | 0.9944                 | 0.9967               |\n",
+        "\n",
+        "\n",
+        "* **DecisionTree** teve o melhor desempenho no teste: **0.9971**\n",
+        "* **SVM** foi muito consistente: mesma média na validação cruzada e bom score no teste (**0.9967**)\n",
+        "* **KNN** foi bastante estável, mas o score no teste caiu um pouco (**0.9930**)\n",
+        "* **NaiveBayes** foi o mais fraco, com uma acurácia menor (**0.9869**)"
+      ],
+      "metadata": {
+        "id": "WXXcgTx56tlm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "fig = plt.figure(figsize=(15,10))\n",
@@ -1131,12 +1167,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "KBuyJRTBaSJA",
-        "outputId": "2b2fc140-6d0f-405e-c4a3-ca4cf92634b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 930
-        }
+        },
+        "id": "KBuyJRTBaSJA",
+        "outputId": "2b2fc140-6d0f-405e-c4a3-ca4cf92634b1"
       },
       "execution_count": 10,
       "outputs": [
@@ -1172,12 +1208,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "r4onK21UXcI8",
-        "outputId": "54fb1e11-dd8e-4022-f3b8-80bb2649590d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "r4onK21UXcI8",
+        "outputId": "54fb1e11-dd8e-4022-f3b8-80bb2649590d"
       },
       "execution_count": 11,
       "outputs": [
@@ -1199,11 +1235,11 @@
         "print(names_x)"
       ],
       "metadata": {
-        "id": "fgd7se00kKFo",
-        "outputId": "48c40767-26a0-40c4-870d-8a98931c38f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fgd7se00kKFo",
+        "outputId": "48c40767-26a0-40c4-870d-8a98931c38f6"
       },
       "execution_count": 12,
       "outputs": [
