--- a/mushroom.ipynb
+++ b/mushroom.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcxrRvC+MmKphW7Cf9fjH0",
+      "authorship_tag": "ABX9TyPIAWzVhBmpcErhSDF4aNTF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "Cv_UUnStOCGU"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -552,7 +552,7 @@
       "metadata": {
         "id": "zVTOTIewaMty"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +597,7 @@
       "metadata": {
         "id": "RLsbYrZLhf0z"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
         "id": "jsukrNjQhluF",
         "outputId": "082f664d-6b5e-4294-fdf5-2ab7ad3d523a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
         "id": "numrOtZzoJLE",
         "outputId": "a2329da5-2c71-4b6c-ed46-5dd99b0866de"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,7 +903,7 @@
         "id": "NKLK1I2erwU6",
         "outputId": "f9b8ec69-7b82-4e56-ccb1-f05aa15076d2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +988,7 @@
         "id": "DAKoaQCM21nj",
         "outputId": "95c1eccb-c3c9-41a5-a773-fd73a9ee8e65"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
         "id": "VHXshmPQ5bcS",
         "outputId": "74a05cd9-631e-4568-c449-cc2b85a9cb23"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,7 +1142,7 @@
         "id": "KBuyJRTBaSJA",
         "outputId": "fae26b5d-a8f7-4806-a545-93f61ac45340"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1183,7 +1183,7 @@
         "id": "r4onK21UXcI8",
         "outputId": "312bf2a0-4861-406f-88c1-0b4eaae69835"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1222,7 +1222,7 @@
         "id": "ZEFibCUXBOAZ",
         "outputId": "ef67b06f-5587-4be7-bbd9-afd0c06117a5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1294,7 +1294,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,6 +1306,43 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusão\n",
+        "\n",
+        "O presente trabalho teve como objetivo principal a construção de um modelo de machine learning para a resolução de um problema de classificação. Diferentemente do fluxo habitual, no qual primeiro se identifica um problema e depois se busca um conjunto de dados relevante, aqui o processo foi invertido: partiu-se da escolha de um dataset interessante e, a partir dele, foi elaborado o problema. A questão proposta (\"Será que posso comer esse cogumelo?\") extrapola o desafio técnico e levanta também questões éticas sobre o uso responsável da Inteligência Artificial, já que uma classificação incorreta pode causar desde uma leve intoxicação alimentar até danos graves e irreversíveis, incluindo a morte. Por esse motivo, foi adicionado à aplicação front-end um alerta explícito indicando que se trata de um exercício acadêmico, sem qualquer garantia quanto à segurança do consumo. De fato, este projeto configura-se como um exercício prático que permitiu explorar e compreender diversas etapas do fluxo de machine learning: seleção de dados, pré-processamento, modelagem, otimização e implementação.\n",
+        "\n",
+        "Considerados os dilemas éticos, partimos para a construção do modelo. O dataset original, disponível em https://archive.ics.uci.edu/dataset/73/mushroom,  contém 8.124 amostras hipotéticas, correspondentes a 23 espécies de cogumelos classificadas como \"comestível\" ou \"venenoso\", descritas por meio de 22 atributos físicos. Para tornar o modelo mais acessível ao usuário final, selecionaram-se apenas as cinco primeiras características para o treinamento.\n",
+        "\n",
+        "Foram utilizados quatro algoritmos de classificação: KNN, Decision Tree, Naive Bayes e SVM. Todos apresentaram resultados bastante satisfatórios, com acurácia acima de 98%. Como as variáveis eram todas categóricas, foi necessário aplicar o OneHotEncoder no pré-processamento. Na etapa de otimização, diferentemente do exemplo apresentado na aula 02, não foram utilizados nem o StandardScaler nem o MinMaxScaler, sendo aplicado um conjunto próprio de parâmetros para cada algoritmo no GridSearchCV.\n",
+        "\n",
+        "### Análise de resultados do modelo:\n",
+        "\n",
+        "Ao comparar a acurácia média da validação cruzada antes e depois da otimização, observou-se uma variação muito pequena, em alguns casos até negativa:\n",
+        "\n",
+        "\n",
+        "| Modelo        |Acurácia CV Antes | Acurácia CV GridSearch | Variação |\n",
+        "|---------------|-------------------|------------------------|----------------------|\n",
+        "| **KNN**               | 0.9933            | 0.9937                 | +0.04%               |\n",
+        "| **DecisionTree**       | 0.9930            | 0.9931                 | +0.01%               |\n",
+        "| **NaiveBayes**        | 0.9854            | 0.9851                 | -0.03%               |\n",
+        "| **SVM**               | 0.9944            | 0.9944                 | 0%               |\n",
+        "\n",
+        "Nos testes com os dados não utilizados no treinamento, o modelo Decision Tree apresentou o melhor score: 0,9971.\n",
+        "\n",
+        "Como esperado, o Naive Bayes foi o modelo com as menores acurácias, ainda que bastante altas (cerca de 98,6%).\n",
+        "\n",
+        "Em alguns testes iniciais, o modelo KNN alcançou acurácia de 100% com os dados não treinados após otimização. Isso provavelmente ocorreu devido à aleatoriedade da divisão dos dados (mesmo utilizando diferentes seeds além da 42), resultando em conjuntos mais facilmente separáveis.\n",
+        "\n",
+        "O modelo SVM, que obteve a maior acurácia média nas validações cruzadas, foi o escolhido para exportação. Para isso, foi necessário ativar a funcionalidade de cálculo de probabilidade, o que aumentou ligeiramente o tempo de treinamento.\n",
+        "\n",
+        "Por fim, a aplicação backend foi desenvolvida com um endpoint que permite utilizar o modelo para classificação, e o front-end foi construído e integrado à API. Constatou-se que a escolha do modelo depende fortemente das características iniciais dos dados e do tratamento aplicado a eles. Algumas vezes, mesmo sem otimizações complexas, os modelos podem atingir resultados altamente satisfatórios; outras vezes, ajustes mais refinados serão necessários. Além disso, para cada tipo de dado, diferentes estratégias de pré-processamento e modelagem podem ser recomendadas, sendo essencial a consulta à documentação oficial e à bibliografia especializada."
+      ],
+      "metadata": {
+        "id": "VNzu74qNm1tE"
+      }
     }
   ]
 }
