--- a/mushroom.ipynb
+++ b/mushroom.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIAWzVhBmpcErhSDF4aNTF",
+      "authorship_tag": "ABX9TyPEnDulSmQJSVWa18rdJ2wV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/LucasRosas/MVP-2-Colab/blob/main/mushroom.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mushroom\n",
+        "\n",
+        "Construção de modelo de machine learning para classificação de cogumelos em comestíveis ou venenosos.\n",
+        "\n",
+        "```\n",
+        "A última execução completa deste notebook demorou 6min51s.\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "_5dl3bW0196Y"
+      }
     },
     {
       "cell_type": "code",
@@ -54,7 +69,7 @@
       "metadata": {
         "id": "Cv_UUnStOCGU"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -73,14 +88,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 326
+          "height": 306
         },
         "id": "Ltl8Y8OLaIYr",
-        "outputId": "787428c9-81dc-4890-c5e6-6516103046f7"
+        "outputId": "f18d8789-9b1d-495d-fff7-482431f929cf"
       },
       "outputs": [
         {
@@ -126,7 +141,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f75f361e-0a0d-41fb-96f8-c58dffd0c5d1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bdba63cd-0055-4d8d-9d0b-4da34418b17b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -296,7 +311,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f75f361e-0a0d-41fb-96f8-c58dffd0c5d1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bdba63cd-0055-4d8d-9d0b-4da34418b17b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -348,12 +363,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f75f361e-0a0d-41fb-96f8-c58dffd0c5d1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bdba63cd-0055-4d8d-9d0b-4da34418b17b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f75f361e-0a0d-41fb-96f8-c58dffd0c5d1');\n",
+              "        const element = document.querySelector('#df-bdba63cd-0055-4d8d-9d0b-4da34418b17b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -373,8 +388,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d333cd74-5c06-4b7a-bc4f-2caf5cc8c975\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d333cd74-5c06-4b7a-bc4f-2caf5cc8c975')\"\n",
+              "    <div id=\"df-1d1e365d-697d-4164-abaf-b7bd53566ad0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1d1e365d-697d-4164-abaf-b7bd53566ad0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -493,7 +508,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d333cd74-5c06-4b7a-bc4f-2caf5cc8c975 button');\n",
+              "            document.querySelector('#df-1d1e365d-697d-4164-abaf-b7bd53566ad0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -552,7 +567,7 @@
       "metadata": {
         "id": "zVTOTIewaMty"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -597,7 +612,7 @@
       "metadata": {
         "id": "RLsbYrZLhf0z"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -698,9 +713,9 @@
           "height": 1000
         },
         "id": "jsukrNjQhluF",
-        "outputId": "082f664d-6b5e-4294-fdf5-2ab7ad3d523a"
+        "outputId": "997a4ccf-9cc5-4187-b56d-7fc7b668d13d"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,9 +839,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "numrOtZzoJLE",
-        "outputId": "a2329da5-2c71-4b6c-ed46-5dd99b0866de"
+        "outputId": "a3a91972-6772-4de6-e41f-c6788e7c7a0a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,9 +916,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKLK1I2erwU6",
-        "outputId": "f9b8ec69-7b82-4e56-ccb1-f05aa15076d2"
+        "outputId": "b85b91cc-b4be-4356-e4c1-2e533fdb1e06"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,9 +1001,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DAKoaQCM21nj",
-        "outputId": "95c1eccb-c3c9-41a5-a773-fd73a9ee8e65"
+        "outputId": "592f3c01-4c50-404f-ed23-01de8a9bbed2"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,9 +1084,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VHXshmPQ5bcS",
-        "outputId": "74a05cd9-631e-4568-c449-cc2b85a9cb23"
+        "outputId": "e60dca66-3ab8-4570-b3f8-bd4ac4dc9d4c"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,9 +1155,9 @@
           "height": 930
         },
         "id": "KBuyJRTBaSJA",
-        "outputId": "fae26b5d-a8f7-4806-a545-93f61ac45340"
+        "outputId": "eb15e8b7-7a39-4b9e-fe18-b7b24f0e6a83"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1181,9 +1196,9 @@
           "height": 407
         },
         "id": "r4onK21UXcI8",
-        "outputId": "312bf2a0-4861-406f-88c1-0b4eaae69835"
+        "outputId": "5e18cffe-1fe2-474a-bea1-3ffa9f0097e9"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1220,9 +1235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZEFibCUXBOAZ",
-        "outputId": "ef67b06f-5587-4be7-bbd9-afd0c06117a5"
+        "outputId": "e1df7518-9d7c-4627-a648-c44406c238a1"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1232,7 +1247,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 12
         }
       ]
     },
@@ -1250,6 +1265,7 @@
       "source": [
         "import joblib\n",
         "import pandas as pd\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
         "# Carrega o modelo\n",
         "modelo = joblib.load(\"best_model_mushroom.pkl\")\n",
@@ -1279,6 +1295,9 @@
         "classes = modelo.classes_\n",
         "mapa_classes = {0: 'comestível', 1: 'venenoso'}\n",
         "\n",
+        "label_encoder = LabelEncoder()\n",
+        "label_encoder.classes_ = classes\n",
+        "\n",
         "label_encoder.fit(iris['classificacao'])\n",
         "print(label_encoder.classes_)\n",
         "\n",
@@ -1289,20 +1308,20 @@
       ],
       "metadata": {
         "id": "Nk-xJFamRGlz",
-        "outputId": "6f421420-4e09-4ce6-de1a-edda75fe92a1",
+        "outputId": "fddc9131-18c9-4a7b-9052-82641d1c37c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['e' 'p']\n",
-            "Probabilidade de ser comestível: 0.00%\n",
-            "Probabilidade de ser venenoso: 100.00%\n"
+            "Probabilidade de ser e: 0.00%\n",
+            "Probabilidade de ser p: 100.00%\n"
           ]
         }
       ]
